# kryxd

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
crates/kryx/: Cargo.toml
crates/kryx/src/: main.rs
crates/kryx/src/cli/: mod.rs
crates/kryx/src/domain/: capabilities.rs  config.rs  identity.rs  manifest.rs  mod.rs
crates/kryx/src/services/: deployment.rs  diagnostics.rs  env.rs  fallback.rs  feature.rs  identity.rs  mod.rs  modules.rs  node.rs  telemetry.rs  theme.rs  translator.rs  virt_engine.rs
docs/: FRONTEND_BACKEND_CONTRACT.md
docs/audits/: KRYONIX_INSTALLER_PHASE2_AUDIT.md  UI_V1_TO_V2_TEST_MIGRATION.md
nix/: notebooklm-mcp.nix  package.nix  ui.nix
nix/patches/: notebooklm-mcp-security.patch
schemas/: capabilities.json  capabilities.schema.json  install-plan.schema.json
scripts/: capture_evidence.sh  fix_map.js  generate-contract-fixtures.mjs  generate-ui-contracts.mjs  update_theme.py
src/: auth.rs  disk.rs  install.rs  main.rs  network.rs  profiles.rs  source.rs  state.rs
src/api/: auth.rs  capabilities.rs  cluster.rs  console.rs  incus.rs  install.rs  mod.rs  storage.rs  system.rs  virt.rs
src/domain/: config.rs  mod.rs  secrets.rs
src/executor/: kryonixos.rs  mod.rs  partition.rs  safety.rs  target_tree.rs  verify.rs
src/middleware/: installer_guard.rs  mod.rs
src/services/: migration.rs  mod.rs  partitioner.rs  security.rs  target_tree.rs
tests/contracts/: install-plan-v2-ui.json
ui/: README.md  clean_jsx.cjs  index.html  package-lock.json  package.json  playwright.config.ts  screenshot.mjs  tailwind.config.js
ui/playwright-report/: index.html
ui/src/: App.jsx  WizardInstaller.jsx  defaultDashboardLayout.ts  index.css  install-plan.schema.json  widgetRegistry.tsx
(+105 files in other folders)
