[package]
name = "kryonix-installer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
secrecy = { version = "0.10", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
chrono = "0.4"
regex = "1.10"
async-stream = "0.3.5"
futures-util = "0.3"
url = "2.5"
kryx = { path = "../kryonix/packages/kryx" }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
notify  = "6"
tracing = "0.1"
walkdir = "2"
